feat: implement new api DiscoverDevices
